--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -77,7 +77,7 @@
 
 
 <div class="form-container">
-    <h2>Contact with Me</h2>
+    <h2>Contact with Us</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }} <!-- Renders the form fields as paragraphs -->
